[gd_scene load_steps=5 format=3 uid="uid://1q85kxr022wx"]

[ext_resource type="Script" uid="uid://ogabnaxf3i7u" path="res://scripts/menus/mainmenu.gd" id="1_823sm"]
[ext_resource type="Texture2D" uid="uid://dmgk5ikupf2e3" path="res://assets/images/title_v1.png" id="1_culcy"]
[ext_resource type="Theme" uid="uid://bfrtp26pjsiky" path="res://scenes/title_screen/button_theme.tres" id="2_3tcxi"]

[sub_resource type="LabelSettings" id="LabelSettings_3tcxi"]
font_size = 30
font_color = Color(0.79305786, 0.89570165, 0.8269901, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.25882354)
shadow_offset = Vector2(2, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_823sm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_culcy")
expand_mode = 4
stretch_mode = 5

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ButtonsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsContainer/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Echoform"
label_settings = SubResource("LabelSettings_3tcxi")

[node name="ConnectingLabel" type="Label" parent="ButtonsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Connecting..."

[node name="ActionButtonsVBox" type="VBoxContainer" parent="ButtonsContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ContinueButton" type="Button" parent="ButtonsContainer/MarginContainer/VBoxContainer/ActionButtonsVBox"]
layout_mode = 2
theme = ExtResource("2_3tcxi")
text = "Continue Journey"

[node name="SettingsButton" type="Button" parent="ButtonsContainer/MarginContainer/VBoxContainer/ActionButtonsVBox"]
layout_mode = 2
theme = ExtResource("2_3tcxi")
text = "Settings"
alignment = 0

[node name="ExitButton" type="Button" parent="ButtonsContainer/MarginContainer/VBoxContainer/ActionButtonsVBox"]
layout_mode = 2
theme = ExtResource("2_3tcxi")
text = "Exit"
alignment = 0

[connection signal="pressed" from="ButtonsContainer/MarginContainer/VBoxContainer/ActionButtonsVBox/ContinueButton" to="." method="_on_continue_button_pressed"]
